Fix spacings

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-header .navbar,
+/* header .navbar,
 header .navbar .nav-link {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -6,4 +6,4 @@ header .navbar .nav-link {
 
 header .navbar .navbar-toggler {
   padding: 0px;
-}
+} */
